<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/circle"
            android:layout_margin="@dimen/_5sdp"
            android:src="@drawable/ic_close"
            app:layout_constraintRight_toRightOf="parent"/>

        <com.gaurav.testrg.custom.BoldTextView
            android:id="@+id/header_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_16sdp"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/add_task_message"
            app:layout_constraintTop_toBottomOf="@+id/close"/>

        <com.gaurav.testrg.custom.RegularTextInputLayout
            android:id="@+id/textInputLayoutTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_2sdp"
            android:layout_marginRight="@dimen/_2sdp"
            android:hint="@string/title"
            app:layout_constraintTop_toBottomOf="@+id/header_title">

            <com.gaurav.testrg.custom.RegularTextInputEditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:gravity="start|center"
                android:textSize="@dimen/_12sdp"
                android:imeOptions="actionNext"
                android:textDirection="anyRtl"
                tools:text=""/>

        </com.gaurav.testrg.custom.RegularTextInputLayout>


        <com.gaurav.testrg.custom.RegularTextInputLayout
            android:id="@+id/textInputDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_2sdp"
            android:hint="@string/description"
            app:passwordToggleTint="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutTitle">
            <com.gaurav.testrg.custom.RegularTextInputEditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_160sdp"
                android:inputType="textMultiLine|textCapSentences"
                android:gravity="top"
                android:imeOptions="actionDone"
                android:textSize="@dimen/_12sdp"
                tools:text=""/>
        </com.gaurav.testrg.custom.RegularTextInputLayout>


        <com.gaurav.testrg.custom.RegularButton
            android:id="@+id/save"
            android:layout_width="@dimen/_160sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/white"
            android:text="@string/save"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputDescription"/>
    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>