<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true"
    app:cardElevation="@dimen/_3sdp"
    app:cardCornerRadius="@dimen/_3sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/circle_yellow"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/ic_edit"
            app:layout_constraintRight_toLeftOf="@+id/delete"/>
        <ImageView
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/circle_red"
            android:layout_margin="@dimen/_5sdp"
            android:src="@drawable/ic_delete"
            android:padding="@dimen/_5sdp"
            app:layout_constraintRight_toRightOf="parent"/>
        <com.gaurav.testrg.custom.BoldTextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/black"
            tools:text="Title message"
            android:padding="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            app:layout_constraintTop_toBottomOf="@+id/delete"/>

        <com.gaurav.testrg.custom.RegularTextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/black"
            tools:text="Title description Title description Title description Title description Title description"
            android:padding="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            app:layout_constraintTop_toBottomOf="@+id/title"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <com.gaurav.testrg.custom.RegularTextInputLayout
            android:id="@+id/textInputLayoutTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_2sdp"
            android:layout_marginRight="@dimen/_2sdp"
            android:hint="@string/title"
            app:layout_constraintTop_toTopOf="parent">

            <com.gaurav.testrg.custom.RegularTextInputEditText
                android:id="@+id/etTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                android:gravity="start|center"
                android:textSize="@dimen/_12sdp"
                android:imeOptions="actionNext"
                android:textDirection="anyRtl"
                tools:text=""/>

        </com.gaurav.testrg.custom.RegularTextInputLayout>


        <com.gaurav.testrg.custom.RegularTextInputLayout
            android:id="@+id/textInputDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_2sdp"
            android:hint="@string/description"
            app:passwordToggleTint="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutTitle">
            <com.gaurav.testrg.custom.RegularTextInputEditText
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_120sdp"
                android:inputType="textMultiLine|textCapSentences"
                android:gravity="top"
                android:imeOptions="actionDone"
                android:textSize="@dimen/_12sdp"
                tools:text=""/>
        </com.gaurav.testrg.custom.RegularTextInputLayout>


        <com.gaurav.testrg.custom.RegularButton
            android:id="@+id/update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/white"
            android:text="@string/update"
            app:layout_constraintRight_toLeftOf="@+id/cancel"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputDescription"/>
        <com.gaurav.testrg.custom.RegularButton
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/white"
            android:text="@string/cancel"
            app:layout_constraintLeft_toRightOf="@+id/update"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputDescription"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>